@@ -8,6 +8,20 @@
     xmlns:tal="http://xml.zope.org/namespaces/tal"
     >
 
+  <kupu:part name="comment">
+    <div class="kupu-toolbox not-collapsible" id="kupu-toolbox-comment"
+     tal:define="comment python:here.service_metadata.getMetadataValue(request['model'].get_editable(),'silva-extra','comment',acquire=0)"
+     tal:condition="comment">
+
+      <h1 class="kupu-toolbox-heading" i18n:translate="">comment</h1>
+
+      <div class="kupu-tooltray fixed-alert" style="padding-left:0.4em; border-bottom-style:none;">
+      <div class="kupu-comment-content" tal:content="structure python:comment.replace('\n','&lt;br /&gt;')" />
+      </div>
+
+    </div>
+  </kupu:part>
+
   <kupu:part name="properties">
     <div class="kupu-toolbox" id="kupu-toolbox-properties">
 
